--- a/app/Views/layouts/app.html.twig
+++ b/app/Views/layouts/app.html.twig
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="csrf-token" content="<?= csrf_hash() ?>">
+  <meta name="csrf-token" content="{{ csrf_hash() }}">
   <title>Admin - Buku Tamu</title>
 
   <!-- Bootstrap CSS -->
@@ -53,7 +53,7 @@
               </span>
             </a>
           </li>
-          <?php if (auth()->user()): ?>
+          {% if is_logged_in() %}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toogle" href="#navbar-user-management" data-bs-toggle="dropdown" data-bs-autoclose="outside" role="button" aria-expanded="false">
                 <span class="nav-link-icon">
@@ -64,16 +64,16 @@
                 <span class="nav-link-title"> User Management </span>
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="/users">Daftar Pengguna</a>
+                <a class="dropdown-item" href="{{ url_to('User::index') }}">Daftar Pengguna</a>
               </div>
             </li>
-          <?php endif; ?>
+          {% endif %}
         </ul>
         <div class="navbar-nav flex-row order-md-last ms-auto">
-          <?php if (auth()->user()): ?>
+          {% if is_logged_in() %}
             <div class="nav-item dropdown">
               <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
-                <div><?= auth()->user()->username; ?></div>
+                <div>{{ username() }}</div>
               </a>
               <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                 <a href="#" class="dropdown-item">Status</a>
@@ -84,9 +84,9 @@
                 <a href="/logout" class="dropdown-item">Logout</a>
               </div>
             </div>
-          <?php else: ?>
+          {% else %}
             <a href="/login" class="btn btn-primary">Login</a>
-          <?php endif; ?>
+          {% endif %}
         </div>
       </div>
     </header>
@@ -96,8 +96,9 @@
           <div class="col-12">
             <div class="card">
               <div class="card-body">
-                <?= $this->include('alert') ?>
-                <?= $this->renderSection('content') ?>
+                {% include "alert" %}
+                {% block content %}{% endblock %}
+                
               </div>
             </div>
           </div>
@@ -128,7 +129,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0/dist/js/tabler.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/2.2.2/js/dataTables.min.js"></script>
 
-    <?= $this->renderSection('javascript') ?>
+    {% block javascript %}{% endblock %}
 
 </body>
 
