Feat: add master position and identity index view

--- a/app/Views/user/index.html.twig
+++ b/app/Views/user/index.html.twig
@@ -10,7 +10,7 @@
     </div>
     <div class="col-auto ms-auto">
       <div class="btn-list">
-        <a href="{{ url_to('User::create')  }}" class="btn btn-primary d-none d-sm-inline-block">
+        <a href="{{ url_to('User::new')  }}" class="btn btn-primary d-none d-sm-inline-block">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
             stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -82,7 +82,7 @@
           }
         },
         "ajax": {
-          "url": "{{ site_url('user/ajaxList') }}",
+          "url": "{{ site_url('admin/user/ajaxList') }}",
           "type": "POST",
           "async": true,
           "error": function (xhr, error, code) {
