--- a/app/Views/layouts/app.html.twig
+++ b/app/Views/layouts/app.html.twig
@@ -37,7 +37,7 @@
           </a>
         </div>
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item {{ uri_string() == '' ? 'active' : '' }}">
             <a class="nav-link" href="/">
               <span class="nav-link-icon">
                 <!-- Download SVG icon from http://tabler.io/icons/icon/home -->
@@ -54,6 +54,26 @@
             </a>
           </li>
           {% if is_logged_in() %}
+            <li class="nav-item dropdown {{ str_contains(uri_string(),'admin/master') ? 'active' : '' }}">
+              <a class="nav-link dropdown-toogle" href="#navbar-user-management" data-bs-toggle="dropdown"
+                data-bs-autoclose="outside" role="button" aria-expanded="false">
+                <span class="nav-link-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="icon icon-tabler icons-tabler-outline icon-tabler-settings">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path
+                      d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" />
+                    <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
+                  </svg>
+                </span>
+                <span class="nav-link-title"> Master </span>
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item {{ uri_string() == 'admin/master/position' ? 'active' : '' }}" href="{{ url_to('Position::index') }}">Jabatan</a>
+                <a class="dropdown-item {{ uri_string() == 'admin/master/identity' ? 'active' : '' }}" href="{{ url_to('Identity::index') }}">Identitas</a>
+              </div>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toogle" href="#navbar-user-management" data-bs-toggle="dropdown" data-bs-autoclose="outside" role="button" aria-expanded="false">
                 <span class="nav-link-icon">
