--- a/app/Views/layouts/app.html.twig
+++ b/app/Views/layouts/app.html.twig
@@ -160,6 +160,7 @@
     
     <!-- Global Modal JS -->
     <script src="{{ base_url('js/modal.js') }}"></script>
+    <script src="{{ base_url('js/actionButton.js') }}"></script>
 
     {% block javascript %}{% endblock %}
 
