--- a/app/Views/position/index.html.twig
+++ b/app/Views/position/index.html.twig
@@ -10,7 +10,7 @@
     </div>
     <div class="col-auto ms-auto">
       <div class="btn-list">
-        <button type="button" class="btn btn-primary" onclick="openGlobalModal('{{ url_to('Position::new') }}', 'Tambah Data', '{{ url_to('Position::store') }}')">
+        <button type="button" class="btn btn-primary" onclick="openGlobalModal('{{ new }}', 'Tambah Data', '{{ store }}')">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
             stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -74,7 +74,7 @@
         }
       },
       "ajax": {
-        "url": "{{ site_url('admin/master/position/ajaxList') }}",
+        "url": "{{ url_to('Identity::ajaxList') }}",
         "type": "POST",
         "async": true,
         "error": function (xhr, error, code) {
@@ -88,79 +88,28 @@
         "targets": [],
         "orderable": false,
       }],
-      "columns": [{
-        data: 'no'
-      },
-      {
-        data: 'name'
-      },
-      {
-        data: 'slug'
-      },
-      {
-        data: null,
-        render: function (data, type, row) {
-
-          return `
-                <a class="btn btn-md btn-primary" onclick="openGlobalModal('{{ site_url('admin/master/position') }}/${row.id}/edit', 'Edit Data', '{{ url_to('Position::store') }}')">Edit</a>
-                <a class="btn btn-md btn-danger" onclick="deleteData(${row.id})">Delete</a>
-              `
+      "columns": [
+        {
+          data: 'no'
+        },
+        {
+          data: 'name'
+        },
+        {
+          data: 'slug'
+        },
+        {
+          data: null,
+          render: function (data, type, row) {
+            return renderActionButtons(
+              `{{ site_url('admin/master/position') }}/${row.id}/edit`,
+              `{{ url_to('Position::store') }}`,
+              `{{ site_url('admin/master/position/') }}/${row.id}`
+            )
+          }
         }
-      }
       ]
     });
-
-    // Fungsi untuk menghapus data dengan Bootbox
-    window.deleteData = function(id) {
-        bootbox.confirm({
-            title: "Konfirmasi Hapus",
-            message: "Apakah Anda yakin? Data yang dihapus tidak dapat dikembalikan!",
-            buttons: {
-                cancel: {
-                    label: '<i class="fa fa-times"></i> Batal',
-                    className: 'btn-secondary'
-                },
-                confirm: {
-                    label: '<i class="fa fa-check"></i> Ya, hapus!',
-                    className: 'btn-danger'
-                }
-            },
-            callback: function(result) {
-                if (result) {
-                    $.ajax({
-                        url: "{{ site_url('admin/master/position/') }}/" + id,
-                        type: 'DELETE',
-                        headers: {
-                          'X-CSRF-TOKEN': csrfToken
-                        },
-                        dataType: 'json',
-                        success: function(response) {
-                            if (response.success) {
-                                bootbox.alert({
-                                    title: "Terhapus!",
-                                    message: response.message,
-                                    callback: function() {
-                                        $('#dataTable').DataTable().ajax.reload();
-                                    }
-                                });
-                            } else {
-                                bootbox.alert({
-                                    title: "Error!",
-                                    message: response.message
-                                });
-                            }
-                        },
-                        error: function() {
-                            bootbox.alert({
-                                title: "Error!",
-                                message: "Terjadi kesalahan pada server"
-                            });
-                        }
-                    });
-                }
-            }
-        });
-    };
   });
 </script>
 {% endblock javascript %}
