Hotfix: disable ordering datatable

--- a/app/Views/identity/index.html.twig
+++ b/app/Views/identity/index.html.twig
@@ -57,7 +57,7 @@
     var table = $('#dataTable').DataTable({
       "processing": true,
       "serverSide": true,
-      "ordering": true,
+      "ordering": false,
       "scrollX": true,
       "oLanguage": {
         "sLengthMenu": "Tampilkan _MENU_ data per halaman",
