--- a/app/Views/identity/_form.html.twig
+++ b/app/Views/identity/_form.html.twig
@@ -3,7 +3,7 @@
         <input type="hidden" name="id" value="{{ item.id|default('') }}">
 
         <div class="mb-3">
-            <label class="form-label">Nama Identias</label>
+            <label class="form-label">Nama Identitas</label>
             <input type="text" class="form-control" name="name" value="{{ item.name|default('') }}" required>
         </div>
     </div>
