--- a/app/Views/employee/_form.html.twig
+++ b/app/Views/employee/_form.html.twig
@@ -1,10 +1,11 @@
 <div class="row">
     <div class="col-md-6 col-xl-12">
         <input type="hidden" name="id" value="{{ item.id|default('') }}">
-
+        <input type="hidden" id="position_id" value="{{ item.position_id }}" />
+        <input type="hidden" id="status_employee" value="{{ item.status }}" />
         <div class="mb-3">
             <label class="form-label">Jabatan</label>
-            <select id='employeePosition' class="form-control">
+            <select id='employeePosition' name="position_id" class="form-control">
                 <option value='0'>-- Pilih Jabatan--</option>
                 {% for option in options  %}
                     <option value='{{ option.id }}'>{{ option.name }}</option>
