--- a/app/Views/employee/index.html.twig
+++ b/app/Views/employee/index.html.twig
@@ -34,6 +34,7 @@
                 <th>Nama</th>
                 <th>Email</th>
                 <th>Position</th>
+                <th>Status</th>
                 <th>Aksi</th>
             </tr>
         </thead>
@@ -105,12 +106,20 @@
                     data: 'position'
                 },
                 {
+                    data: 'status',
+                    render: function (data, type, row) {
+                        var status = row.status == 'active' ? 'Aktif' : 'Non Aktif';
+                        var color = row.status == 'active' ? 'bg-green-lt' : 'bg-red-lt';
+                        return `<span class="badge badge-pill ${color}">${status}</span>`
+                    }
+                },
+                {
                     data: null,
                     render: function (data, type, row) {
                         return renderActionButtons(
-                            `{{ site_url('admin/master/employee') }}/${row.id}/edit`,
+                            `{{ site_url('admin/employee') }}/${row.id}/edit`,
                             `{{ url_to('Employee::store') }}`,
-                            `{{ site_url('admin/master/employee/') }}/${row.id}`
+                            `{{ site_url('admin/employee/') }}/${row.id}`
                         )
                     }
                 }
