--- a/app/Views/employee/new.html.twig
+++ b/app/Views/employee/new.html.twig
@@ -1,5 +1,3 @@
-{% extends "layouts/app" %}
-
-{% block content %}
 {% include "employee/_form" %}
-{% endblock content %}
+
+<script src="{{ base_url('js/employee.js') }}"></script>
