--- a/app/Views/layouts/app.html.twig
+++ b/app/Views/layouts/app.html.twig
@@ -20,6 +20,10 @@
     :root {
       --tblr-font-sans-serif: 'Inter';
     }
+
+    .select2-container {
+      z-index: 9999;
+    }
   </style>
 </head>
 
