--- a/app/Views/employee/index.html.twig
+++ b/app/Views/employee/index.html.twig
@@ -5,7 +5,7 @@
     <div class="row align-items-center">
         <div class="col">
             <h2 class="page-title">
-                Pegawai
+                Daftar Pegawai
             </h2>
         </div>
         
