--- a/app/Views/layouts/app.html.twig
+++ b/app/Views/layouts/app.html.twig
@@ -59,6 +59,17 @@
             </a>
           </li>
           {% if is_logged_in() %}
+            <li class="nav-item {{ str_contains(uri_string(),'admin/dashboard') ? 'active' : '' }}">
+              <a class="nav-link" href="{{ url_to('Dashboard::index') }}">
+                <span class="nav-link-icon">
+                  <!-- Download SVG icon from http://tabler.io/icons/icon/home -->
+                  <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-layout-dashboard"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 3a2 2 0 0 1 2 2v6a2 2 0 0 1 -2 2h-4a2 2 0 0 1 -2 -2v-6a2 2 0 0 1 2 -2zm0 12a2 2 0 0 1 2 2v2a2 2 0 0 1 -2 2h-4a2 2 0 0 1 -2 -2v-2a2 2 0 0 1 2 -2zm10 -4a2 2 0 0 1 2 2v6a2 2 0 0 1 -2 2h-4a2 2 0 0 1 -2 -2v-6a2 2 0 0 1 2 -2zm0 -8a2 2 0 0 1 2 2v2a2 2 0 0 1 -2 2h-4a2 2 0 0 1 -2 -2v-2a2 2 0 0 1 2 -2z" /></svg>
+                </span>
+                <span class="nav-link-title">
+                  Dashboard
+                </span>
+              </a>
+            </li>
             <li class="nav-item {{ str_contains(uri_string(),'admin/guest') ? 'active' : '' }}">
               <a class="nav-link" href="{{ url_to('Guest::index') }}">
                 <span class="nav-link-icon">
